apps/grocy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grocy
  namespace: grocy
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  selector:
    app: grocy
